prevent overflow from display field

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ button {
     "Lucida Sans", Arial, sans-serif;
   font-weight: bold;
   font-size: 30px;
+  overflow: hidden;
 }
 
 .blue {
